Gray-Space/src/objects/MV_TheMovieDB__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>MV_API_Key__c</fullName>
        <label>API Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Base_Url__c</fullName>
        <label>Base Url</label>
        <length>240</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Images_Base_Url__c</fullName>
        <label>Images Base Url</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Search_Movie_URI__c</fullName>
        <label>Search Movie URI</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <label>The Movie DB</label>
</CustomObject>